@@ -20,7 +20,7 @@ class PageRequestTest {
     public void testDeserialize() throws IOException, URISyntaxException {
         final var url = PageRequestTest.class.getResource("/example-locations.json");
         final var resPath = Paths.get(url.toURI());
-        String json = new String(Files.readAllBytes(resPath), StandardCharsets.UTF_8);
+        String json = Files.readString(resPath);
 
         final var expectedPageInfo = new PageInfo(25, 1048, 42, 1);
 
